--- a/data/antibody_escape_config.yml
+++ b/data/antibody_escape_config.yml
@@ -26,16 +26,16 @@
 #      favorable effect (as for soluble receptor selections), in which case use -1.
 #    - `stat_name`: name assigned to statistic, eg, "escape" or "receptor affinity".
 
-assays:
-  antibody_escape:
-    title: Antibody/serum escape
-    selections: antibody_selections
-    averages: avg_antibody_escape
-    prob_escape_scale:
-      type: symlog
-      constant: 0.04
-    scale_stat: 1
-    stat_name: escape
+assays: {}
+  #  antibody_escape:
+  #   title: Antibody/serum escape
+  #   selections: antibody_selections
+  #   averages: avg_antibody_escape
+  #   prob_escape_scale:
+  #     type: symlog
+  #     constant: 0.04
+  #   scale_stat: 1
+  #   stat_name: escape
   # receptor_affinity:
   #   title: Receptor affinity
   #   selections: receptor_selections
@@ -123,19 +123,19 @@ plot_hide_stats_default: &plot_hide_stats_default
       times_seen: 3
 
 # define the antibody selections
-antibody_selections:
+antibody_selections: {}
 
-  A-240129-rescue_1-func-1:
-    neut_standard_name: neut_standard
-    prob_escape_filters: *prob_escape_filters_default
-    polyclonal_params: *polyclonal_params_default
-    escape_plot_kwargs: *escape_plot_kwargs_default
-    plot_hide_stats: *plot_hide_stats_default
-    no_antibody_sample: A-240129-rescue_1-VSVG-1
-    antibody_samples:
-     A-240129-rescue_1-no_antibody-1:
-      concentration: 0.15
-      use_in_fit: true
+  # A-240129-rescue_1-func-1:
+  #   neut_standard_name: neut_standard
+  #   prob_escape_filters: *prob_escape_filters_default
+  #   polyclonal_params: *polyclonal_params_default
+  #   escape_plot_kwargs: *escape_plot_kwargs_default
+  #   plot_hide_stats: *plot_hide_stats_default
+  #   no_antibody_sample: A-240129-rescue_1-VSVG-1
+  #   antibody_samples:
+  #    A-240129-rescue_1-no_antibody-1:
+  #     concentration: 0.15
+  #     use_in_fit: true
 
 #   LibA-220210-REGN10933-2:
 #     neut_standard_name: neut_standard
@@ -210,19 +210,19 @@ antibody_selections:
 #       use_in_fit: true
 
 # define the soluble receptor selections
-receptor_selections:
+receptor_selections: {}
 
-  A-240129-rescue_1-no_receptor-1:
-    neut_standard_name: neut_standard
-    prob_escape_filters: *prob_escape_filters_default
-    polyclonal_params: *polyclonal_params_default
-    escape_plot_kwargs: *escape_plot_kwargs_default
-    plot_hide_stats: *plot_hide_stats_default
-    no_antibody_sample: A-240129-rescue_1-no_antibody-1
-    antibody_samples:
-     A-240129-rescue_1-no_antibody-1:
-      concentration: 0.15
-      use_in_fit: true
+  # A-240129-rescue_1-no_receptor-1:
+  #   neut_standard_name: neut_standard
+  #   prob_escape_filters: *prob_escape_filters_default
+  #   polyclonal_params: *polyclonal_params_default
+  #   escape_plot_kwargs: *escape_plot_kwargs_default
+  #   plot_hide_stats: *plot_hide_stats_default
+  #   no_antibody_sample: A-240129-rescue_1-no_antibody-1
+  #   antibody_samples:
+  #    A-240129-rescue_1-no_antibody-1:
+  #     concentration: 0.15
+  #     use_in_fit: true
 
 #   LibA-220302-pretending_S2M11_is_receptor-2:
 #     neut_standard_name: neut_standard
