--- a/data/antibody_escape_config.yml
+++ b/data/antibody_escape_config.yml
@@ -384,7 +384,62 @@ antibody_selections:
      A-240331-rescue_4-CR4098-40000-1:
       concentration: 40
       use_in_fit: true
-      
+
+         #units in ng/mL
+  LibA-240331-CR57:
+    neut_standard_name: neut_standard
+    prob_escape_filters: *prob_escape_filters_default
+    polyclonal_params: *polyclonal_params_default
+    escape_plot_kwargs: *escape_plot_kwargs_default
+    plot_hide_stats: *plot_hide_stats_default
+    no_antibody_sample: A-240331-rescue_4-no_antibody-1
+    antibody_samples:
+     A-240331-rescue_4-CR57-20-1:
+      concentration: 20
+      use_in_fit: false
+     A-240331-rescue_4-CR57-100-1:
+      concentration: 100
+      use_in_fit: true
+     A-240331-rescue_4-CR57-200-1:
+      concentration: 200
+      use_in_fit: true
+     A-240331-rescue_4-CR57-400-1:
+      concentration: 400
+      use_in_fit: true
+     A-240331-rescue_4-CR57-1000-1:
+      concentration: 1000
+      use_in_fit: true
+     A-240331-rescue_4-CR57-2000-1:
+      concentration: 2000
+      use_in_fit: true
+
+  LibA-240331-CR57_duplicate:
+    neut_standard_name: neut_standard
+    prob_escape_filters: *prob_escape_filters_default
+    polyclonal_params: *polyclonal_params_default
+    escape_plot_kwargs: *escape_plot_kwargs_default
+    plot_hide_stats: *plot_hide_stats_default
+    no_antibody_sample: A-240331-rescue_4-no_antibody-3
+    antibody_samples:
+     A-240331-rescue_4-CR57-20-1:
+      concentration: 20
+      use_in_fit: false
+     A-240331-rescue_4-CR57-100-1:
+      concentration: 100
+      use_in_fit: true
+     A-240331-rescue_4-CR57-200-1:
+      concentration: 200
+      use_in_fit: true
+     A-240331-rescue_4-CR57-400-1:
+      concentration: 400
+      use_in_fit: true
+     A-240331-rescue_4-CR57-1000-1:
+      concentration: 1000
+      use_in_fit: true
+     A-240331-rescue_4-CR57-2000-1:
+      concentration: 2000
+      use_in_fit: true
+    
   # LibA-220222-RVA122:
   #   neut_standard_name: neut_standard
   #   prob_escape_filters: *prob_escape_filters_default
@@ -608,8 +663,13 @@ avg_antibody_escape:
     selections:
       - LibA-240331-CR4098
       - LibA-240331-CR4098_duplicate
-      
-      
+  CR57:
+    <<: *avg_antibody_escape_default
+    title: placeholder to get pipeline to run
+    selections:
+      - LibA-240331-CR57
+      - LibA-240331-CR57_duplicate
+
 #   S2M11:
 #     <<: *avg_antibody_escape_default
 #     title: Escape map for antibody S2M11
